# Mechanism

./: CMakeLists.txt  main.cpp  model.cpp  model.hpp  object.cpp  object.hpp  settings.hpp
data/objects/: axis.txt  piramide.txt  square.txt  triangle.txt
data/scenes/: scene.txt
objects/: triangle.txt
src/: settings.hpp  textureLoader.hpp
src/Camera/: camera.cpp  camera.hpp
src/Model/: model.cpp  model.hpp
src/Object/: object.cpp  object.hpp
src/Scene/: scene.cpp  scene.hpp
